# dotfiles

aerospace/: aerospace.toml
fish/: config.fish  fish_plugins
fish/functions/: fish_greeting.fish  fish_prompt.fish  fish_title.fish  fish_user_key_bindings.fish  fzf_history.fish  ghq_repo.fish  zoxide_cd.fish
git/: config  uranum12.conf
lazygit/: config.yml
mise/: config.toml
nvim/: init.lua  init.vim  nvim-pack-lock.json
nvim/after/lsp/: clangd.lua  lua_ls.lua  pyright.lua
nvim/lua/: autocmd.lua  autocmds.lua  keymap.lua  keymaps.lua  options.lua  plugin.lua
nvim/lua/config/: alpha.lua  autocmds.lua  cmp.lua  commands.lua  keymaps.lua  lspsaga.lua  lualine.lua  mini.lua  nvim-cmp.lua  nvim-lspconfig.lua  nvim-treesitter.lua  options.lua  telescope.lua  toggleterm.lua
nvim/lua/features/: hilens.lua  localconfig.lua  number.lua  terminal.lua
nvim/lua/plugin/: cmp.lua  lsp.lua  mini.lua  misc.lua  telescope.lua  treesitter.lua
nvim/lua/plugins/: cmp.lua  completion.lua  lsp.lua  lspconfig.lua  mini.lua  misc.lua  setup.lua  telescope.lua  treesitter.lua
nvim/snippets/: all.json  c.json  package.json  python.json
sheldon/: plugins.toml
tmux/: tmux.conf
tmux/scripts/: status.sh
tools/: .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.txt  meson.build
tools/include/: zprompt.hpp
tools/src/: tmux-status.cpp  zhist.cpp  zprompt.cpp
tools/src/zprompt/: cwd.cpp  git.cpp  ret.cpp  ssh.cpp  venv.cpp
wezterm/: wezterm.lua
zabrze/: config.yaml
zsh/: .zprofile  .zshenv  .zshrc
zsh-abbr/: user-abbreviations
zsh/hooks/: greeting.zsh  lazy.zsh  prompt.zsh
zsh/lazy/: diff.zsh  ghq.zsh  history.zsh  python.zsh  zoxide.zsh
zsh/zabrze/: cmake.yaml  config.yaml  git.yaml
